--- a/pentevo/unreal/Unreal/Unreal2017.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal2017.vcxproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <ClCompile Include="cheat.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="emulator\z80\z80.cpp" />
     <ClCompile Include="emulator\z80\daa_tabs.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -175,10 +176,7 @@
     <ClCompile Include="hard\zf232.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="emulator\z80\daa_tabs.h" />
-    <ClInclude Include="emulator\z80\op_dd.h" />
-    <ClInclude Include="emulator\z80\op_ed.h" />
-    <ClInclude Include="emulator\z80\op_fd.h" />
+    <ClInclude Include="emulator\z80\private.h" />
     <ClInclude Include="emulator\z80\z80.h" />
     <ClInclude Include="hard\cpu\z80main_fn.h" />
     <ClInclude Include="hard\gs\gsz80_fn.h" />
@@ -232,8 +230,6 @@
     <ClInclude Include="hard\memory.h" />
     <ClInclude Include="mods.h" />
     <ClInclude Include="emulator\ui\opendlg.h" />
-    <ClInclude Include="emulator\z80\op_noprefix.h" />
-    <ClInclude Include="emulator\z80\op_system.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sound\saa1099.h" />
     <ClInclude Include="savesnd.h" />
@@ -252,7 +248,6 @@
     <ClInclude Include="sound\ymf278.h" />
     <ClInclude Include="std.h" />
     <ClInclude Include="sysdefs.h" />
-    <ClInclude Include="emulator\z80\tables.h" />
     <ClInclude Include="tape.h" />
     <ClInclude Include="hard\tsconf.h" />
     <ClInclude Include="util.h" />
