--- a/pentevo/unreal/Unreal/Unreal2017.vcxproj.filters
+++ b/pentevo/unreal/Unreal/Unreal2017.vcxproj.filters
@@ -56,21 +56,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="lib\dinput.lib">
-      <Filter>Resources</Filter>
-    </Library>
-    <Library Include="lib\dxerr8.lib">
-      <Filter>Resources</Filter>
-    </Library>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="cheat.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="config.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\daa_tabs.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="draw.cpp">
@@ -121,9 +110,6 @@
     <ClCompile Include="hard\gs\gsz80.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
-    <ClCompile Include="gui.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
     <ClCompile Include="hard\hdd\hdd.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
@@ -131,9 +117,6 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="hard\hdd\hddio.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="iehelp.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="init.cpp">
@@ -158,27 +141,6 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="hard\memory.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\op_cb.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\op_dd.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\op_ddcb.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\op_ed.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\op_fd.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\op_noprefix.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="opendlg.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="sound\saa1099.cpp">
@@ -212,9 +174,6 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="std.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
-    <ClCompile Include="core\z80\tables.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="tape.cpp">
@@ -265,9 +224,6 @@
     <ClCompile Include="hard\cpu\z80main.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
-    <ClCompile Include="core\z80\z80asm.cpp">
-      <Filter>Sources</Filter>
-    </ClCompile>
     <ClCompile Include="hard\zc.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
@@ -304,45 +260,41 @@
     <ClCompile Include="sound\ayx32.cpp">
       <Filter>Sources\sound</Filter>
     </ClCompile>
-    <ClCompile Include="debugger\dbgbpx.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgcmd.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbglabls.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgmem.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgoth.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgpaint.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgreg.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgrwdlg.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgtrace.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgtsconf.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\dbgwidgets.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
-    <ClCompile Include="debugger\debug.cpp">
-      <Filter>debugger</Filter>
-    </ClCompile>
     <ClCompile Include="visuals.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="emulator\z80\z80.cpp" />
+    <ClCompile Include="emulator\z80\daa_tabs.cpp" />
+    <ClCompile Include="emulator\ui\gui.cpp" />
+    <ClCompile Include="emulator\ui\iehelp.cpp" />
+    <ClCompile Include="emulator\ui\opendlg.cpp" />
+    <ClCompile Include="emulator\z80\op_cb.cpp" />
+    <ClCompile Include="emulator\z80\op_dd.cpp" />
+    <ClCompile Include="emulator\z80\op_ddcb.cpp" />
+    <ClCompile Include="emulator\z80\op_ed.cpp" />
+    <ClCompile Include="emulator\z80\op_fd.cpp" />
+    <ClCompile Include="emulator\z80\op_noprefix.cpp" />
+    <ClCompile Include="emulator\z80\tables.cpp" />
+    <ClCompile Include="emulator\z80\z80asm.cpp" />
+    <ClCompile Include="include\ImGui\imgui.cpp" />
+    <ClCompile Include="include\ImGui\imgui_demo.cpp" />
+    <ClCompile Include="include\ImGui\imgui_draw.cpp" />
+    <ClCompile Include="include\ImGui\imgui_impl_sdl2.cpp" />
+    <ClCompile Include="include\ImGui\imgui_impl_sdlrenderer.cpp" />
+    <ClCompile Include="include\ImGui\imgui_tables.cpp" />
+    <ClCompile Include="include\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="debugger\dbgbpx.cpp" />
+    <ClCompile Include="debugger\dbgcmd.cpp" />
+    <ClCompile Include="debugger\dbglabls.cpp" />
+    <ClCompile Include="debugger\dbgmem.cpp" />
+    <ClCompile Include="debugger\dbgoth.cpp" />
+    <ClCompile Include="debugger\dbgpaint.cpp" />
+    <ClCompile Include="debugger\dbgreg.cpp" />
+    <ClCompile Include="debugger\dbgrwdlg.cpp" />
+    <ClCompile Include="debugger\dbgtrace.cpp" />
+    <ClCompile Include="debugger\dbgtsconf.cpp" />
+    <ClCompile Include="debugger\dbgwidgets.cpp" />
+    <ClCompile Include="debugger\debug.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sound\bass.h">
@@ -355,9 +307,6 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="ddk.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="defs.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="draw.h">
@@ -414,16 +363,10 @@
     <ClInclude Include="hard\gs\gsz80.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="gui.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="hard\hdd\hdd.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="hard\hdd\hddio.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="iehelp.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="init.h">
@@ -445,15 +388,6 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="mods.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="core\z80\op_noprefix.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="core\z80\op_system.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="opendlg.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
@@ -495,9 +429,6 @@
     <ClInclude Include="sysdefs.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="core\z80\tables.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="tape.h">
       <Filter>Headers</Filter>
     </ClInclude>
@@ -523,9 +454,6 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="hard\cpu\z80main.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="core\z80\z80asm.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="hard\zc.h">
@@ -561,56 +489,123 @@
     <ClInclude Include="sound\ayx32.h">
       <Filter>Headers\sound</Filter>
     </ClInclude>
-    <ClInclude Include="debugger\dbgbpx.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgcmd.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbglabls.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgmem.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgoth.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgpaint.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgreg.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgrwdlg.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgtrace.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgtsconf.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\dbgwidgets.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
-    <ClInclude Include="debugger\debug.h">
-      <Filter>debugger</Filter>
-    </ClInclude>
     <ClInclude Include="visuals.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="hard\cpu\z80main_fn.h" />
     <ClInclude Include="hard\gs\gsz80_fn.h" />
-    <ClInclude Include="core\z80\op_fd.h" />
-    <ClInclude Include="core\z80\op_ed.h" />
-    <ClInclude Include="core\z80\op_dd.h" />
-    <ClInclude Include="core\z80\daa_tabs.h" />
-    <ClInclude Include="core\z80\z80.h" />
+    <ClInclude Include="emulator\z80\private.h" />
+    <ClInclude Include="emulator\z80\z80.h" />
+    <ClInclude Include="emulator\ui\gui.h" />
+    <ClInclude Include="emulator\ui\iehelp.h" />
+    <ClInclude Include="emulator\ui\opendlg.h" />
+    <ClInclude Include="emulator\z80\z80asm.h" />
+    <ClInclude Include="include\SDL2\begin_code.h" />
+    <ClInclude Include="include\SDL2\close_code.h" />
+    <ClInclude Include="include\SDL2\SDL.h" />
+    <ClInclude Include="include\SDL2\SDL_assert.h" />
+    <ClInclude Include="include\SDL2\SDL_atomic.h" />
+    <ClInclude Include="include\SDL2\SDL_audio.h" />
+    <ClInclude Include="include\SDL2\SDL_bits.h" />
+    <ClInclude Include="include\SDL2\SDL_blendmode.h" />
+    <ClInclude Include="include\SDL2\SDL_clipboard.h" />
+    <ClInclude Include="include\SDL2\SDL_config.h" />
+    <ClInclude Include="include\SDL2\SDL_cpuinfo.h" />
+    <ClInclude Include="include\SDL2\SDL_egl.h" />
+    <ClInclude Include="include\SDL2\SDL_endian.h" />
+    <ClInclude Include="include\SDL2\SDL_error.h" />
+    <ClInclude Include="include\SDL2\SDL_events.h" />
+    <ClInclude Include="include\SDL2\SDL_filesystem.h" />
+    <ClInclude Include="include\SDL2\SDL_gamecontroller.h" />
+    <ClInclude Include="include\SDL2\SDL_gesture.h" />
+    <ClInclude Include="include\SDL2\SDL_guid.h" />
+    <ClInclude Include="include\SDL2\SDL_haptic.h" />
+    <ClInclude Include="include\SDL2\SDL_hidapi.h" />
+    <ClInclude Include="include\SDL2\SDL_hints.h" />
+    <ClInclude Include="include\SDL2\SDL_joystick.h" />
+    <ClInclude Include="include\SDL2\SDL_keyboard.h" />
+    <ClInclude Include="include\SDL2\SDL_keycode.h" />
+    <ClInclude Include="include\SDL2\SDL_loadso.h" />
+    <ClInclude Include="include\SDL2\SDL_locale.h" />
+    <ClInclude Include="include\SDL2\SDL_log.h" />
+    <ClInclude Include="include\SDL2\SDL_main.h" />
+    <ClInclude Include="include\SDL2\SDL_messagebox.h" />
+    <ClInclude Include="include\SDL2\SDL_metal.h" />
+    <ClInclude Include="include\SDL2\SDL_misc.h" />
+    <ClInclude Include="include\SDL2\SDL_mouse.h" />
+    <ClInclude Include="include\SDL2\SDL_mutex.h" />
+    <ClInclude Include="include\SDL2\SDL_name.h" />
+    <ClInclude Include="include\SDL2\SDL_opengl.h" />
+    <ClInclude Include="include\SDL2\SDL_opengl_glext.h" />
+    <ClInclude Include="include\SDL2\SDL_opengles.h" />
+    <ClInclude Include="include\SDL2\SDL_opengles2.h" />
+    <ClInclude Include="include\SDL2\SDL_opengles2_gl2.h" />
+    <ClInclude Include="include\SDL2\SDL_opengles2_gl2ext.h" />
+    <ClInclude Include="include\SDL2\SDL_opengles2_gl2platform.h" />
+    <ClInclude Include="include\SDL2\SDL_opengles2_khrplatform.h" />
+    <ClInclude Include="include\SDL2\SDL_pixels.h" />
+    <ClInclude Include="include\SDL2\SDL_platform.h" />
+    <ClInclude Include="include\SDL2\SDL_power.h" />
+    <ClInclude Include="include\SDL2\SDL_quit.h" />
+    <ClInclude Include="include\SDL2\SDL_rect.h" />
+    <ClInclude Include="include\SDL2\SDL_render.h" />
+    <ClInclude Include="include\SDL2\SDL_revision.h" />
+    <ClInclude Include="include\SDL2\SDL_rwops.h" />
+    <ClInclude Include="include\SDL2\SDL_scancode.h" />
+    <ClInclude Include="include\SDL2\SDL_sensor.h" />
+    <ClInclude Include="include\SDL2\SDL_shape.h" />
+    <ClInclude Include="include\SDL2\SDL_stdinc.h" />
+    <ClInclude Include="include\SDL2\SDL_surface.h" />
+    <ClInclude Include="include\SDL2\SDL_system.h" />
+    <ClInclude Include="include\SDL2\SDL_syswm.h" />
+    <ClInclude Include="include\SDL2\SDL_test.h" />
+    <ClInclude Include="include\SDL2\SDL_test_assert.h" />
+    <ClInclude Include="include\SDL2\SDL_test_common.h" />
+    <ClInclude Include="include\SDL2\SDL_test_compare.h" />
+    <ClInclude Include="include\SDL2\SDL_test_crc32.h" />
+    <ClInclude Include="include\SDL2\SDL_test_font.h" />
+    <ClInclude Include="include\SDL2\SDL_test_fuzzer.h" />
+    <ClInclude Include="include\SDL2\SDL_test_harness.h" />
+    <ClInclude Include="include\SDL2\SDL_test_images.h" />
+    <ClInclude Include="include\SDL2\SDL_test_log.h" />
+    <ClInclude Include="include\SDL2\SDL_test_md5.h" />
+    <ClInclude Include="include\SDL2\SDL_test_memory.h" />
+    <ClInclude Include="include\SDL2\SDL_test_random.h" />
+    <ClInclude Include="include\SDL2\SDL_thread.h" />
+    <ClInclude Include="include\SDL2\SDL_timer.h" />
+    <ClInclude Include="include\SDL2\SDL_touch.h" />
+    <ClInclude Include="include\SDL2\SDL_types.h" />
+    <ClInclude Include="include\SDL2\SDL_version.h" />
+    <ClInclude Include="include\SDL2\SDL_video.h" />
+    <ClInclude Include="include\SDL2\SDL_vulkan.h" />
+    <ClInclude Include="include\ImGui\imconfig.h" />
+    <ClInclude Include="include\ImGui\imgui.h" />
+    <ClInclude Include="include\ImGui\imgui_impl_sdl2.h" />
+    <ClInclude Include="include\ImGui\imgui_impl_sdlrenderer.h" />
+    <ClInclude Include="include\ImGui\imgui_internal.h" />
+    <ClInclude Include="include\ImGui\imstb_rectpack.h" />
+    <ClInclude Include="include\ImGui\imstb_textedit.h" />
+    <ClInclude Include="include\ImGui\imstb_truetype.h" />
+    <ClInclude Include="debugger\dbgbpx.h" />
+    <ClInclude Include="debugger\dbgcmd.h" />
+    <ClInclude Include="debugger\dbglabls.h" />
+    <ClInclude Include="debugger\dbgmem.h" />
+    <ClInclude Include="debugger\dbgoth.h" />
+    <ClInclude Include="debugger\dbgpaint.h" />
+    <ClInclude Include="debugger\dbgreg.h" />
+    <ClInclude Include="debugger\dbgrwdlg.h" />
+    <ClInclude Include="debugger\dbgtrace.h" />
+    <ClInclude Include="debugger\dbgtsconf.h" />
+    <ClInclude Include="debugger\dbgwidgets.h" />
+    <ClInclude Include="debugger\debug.h" />
+    <ClInclude Include="include\ImGui\stb_sprintf.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Unreal.rc">
       <Filter>Resources</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="include\ImGui\LICENSE.txt" />
   </ItemGroup>
 </Project>
