unreal: support Max Speed toggle in debugger

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -816,6 +816,7 @@ mon.switchay=ALT Y        ; switch active AY (turbo-sound)
 mon.labels=CONTROL J      ; goto label
 mon.memsearch=ALT F6      ; search in memory for changed values (cheats, etc)
 mon.switchdump=CONTROL D  ; CMOS/NVRAM editor
+mon.maxspeed=NUMLOCK      ; max speed on/off
 
 ; keys in registers window
 
