--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -19,7 +19,7 @@ ULAPLUS=TYPE1
 ; ZX-Evo Video DAC resolution: NONE, 3BIT, 4BIT, 5BIT
 TS_VDAC=5BIT
 
-; ZX-Evo Video DAC2 using FT812 (0 - disabled, 1 - enabled)
+; ZX-Evo Video DAC2 using FT812 (0 - disabled, 1 - enabled, 2 - VDAC2 + ESP32)
 TS_VDAC2=0
 
 ; OUT (C), 0 value
@@ -816,7 +816,6 @@ mon.switchay=ALT Y        ; switch active AY (turbo-sound)
 mon.labels=CONTROL J      ; goto label
 mon.memsearch=ALT F6      ; search in memory for changed values (cheats, etc)
 mon.switchdump=CONTROL D  ; CMOS/NVRAM editor
-mon.maxspeed=NUMLOCK      ; max speed on/off
 
 ; keys in registers window
 
