--- a/pentevo/esp32/src/main/CMakeLists.txt
+++ b/pentevo/esp32/src/main/CMakeLists.txt
@@ -1,1 +1,4 @@
 idf_component_register(SRCS "main.cpp" INCLUDE_DIRS ".")
+target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error)
+target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-missing-field-initializers)
+target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-but-set-variable)
